--- a/P-Tracker-3/P-Tracker-3.csproj
+++ b/P-Tracker-3/P-Tracker-3.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorChecking.cs" />
     <Compile Include="Graphical.cs" />
-    <Compile Include="MainMenu.cs" />
+    <Compile Include="Help.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Play.cs" />
