--- a/TournamentTracker/TournamentTracker.csproj
+++ b/TournamentTracker/TournamentTracker.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ErrorChecking.cs" />
+    <Compile Include="Classes\Matches.cs" />
+    <Compile Include="Classes\Round.cs" />
+    <Compile Include="Classes\Team.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
