--- a/TournamentTracker/TournamentTracker.csproj
+++ b/TournamentTracker/TournamentTracker.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="Classes\ErrorChecking.cs" />
     <Compile Include="Classes\Matches.cs" />
+    <Compile Include="Classes\Menu.cs" />
     <Compile Include="Classes\Round.cs" />
+    <Compile Include="Classes\SeriesRounds.cs" />
     <Compile Include="Classes\Team.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
